fix: fixed code area scrollbar

--- a/prism/prismLucario.css
+++ b/prism/prismLucario.css
@@ -26,6 +26,29 @@ pre[class*="language-"] {
   hyphens: none;
 }
 
+pre::-webkit-scrollbar {
+  height: 0.75rem;
+}
+
+/* Track */
+pre::-webkit-scrollbar-track {
+  background: var(--primaryBgDark);
+}
+
+/* Handle */
+pre::-webkit-scrollbar-thumb {
+  background: var(--primaryLight);
+  /* border-radius: 1rem; */
+}
+
+/* Handle on hover */
+pre::-webkit-scrollbar-thumb:hover {
+  background: var(--secondary);
+}
+pre::-webkit-scrollbar-track:hover {
+  background-color: var(--secondaryLight);
+}
+
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1em;
